feat(gatling): updated gatling to 3.3.1